# Dynacase-tutorial-zoo

./: Makefile.in  PubRule  README.md  ZOO.app  ZOO_en.po  ZOO_fr.po  ZOO_init.php.in  configure.in  info.xml.in
Actions/: Makefile  zoo_animalfolder.php  zoo_color.php  zoo_color.xml  zoo_root.xml  zoo_textticketsales.xml  zoo_ticketsales.php  zoo_ticketsales.xml  zoo_xmlticketsales.xml
Actions/Zones/: Makefile  aphoto.php  aphoto.xml  de_mail_accepted.xml  de_mail_refused.xml  de_mail_retry.xml  de_mail_transmited.xml  editcontinent.xml  maladie.xml  viewcmdecuisto.xml  viewenclos.xml  viewtickets.xml  zoo_animalreport.xml  zoo_searchspecies.xml
Families/: Class.WAdoption.php  Class.WAnimal.php  Class.WFL_ZOO_ANIMAL.php  Class.WFL_ZOO_DEMANDEADOPTION.php  Makefile  Method.Adoption.php  Method.Animal.php  Method.Carnet.php  Method.Enclos.php  Method.Entree.php  Method.Espece.php  Method.zoo_animal.php  Method.zoo_carnetsante.php  Method.zoo_classe.php  Method.zoo_cuisinier.php  Method.zoo_demandeadoption.php  Method.zoo_enclos.php  Method.zoo_espece.php  Method.zoo_gardien.php  Method.zoo_veterinaire.php  PARAM_zoo_animal.csv  PARAM_zoo_carnetsante.csv  PARAM_zoo_classe.csv  PARAM_zoo_cuisinier.csv  PARAM_zoo_demandeadoption.csv  PARAM_zoo_enclos.csv  PARAM_zoo_entree.csv  PARAM_zoo_espece.csv  PARAM_zoo_gardien.csv  PARAM_zoo_veterinaire.csv  STRUCT_zoo_animal.csv  STRUCT_zoo_carnetsante.csv  STRUCT_zoo_classe.csv  STRUCT_zoo_cuisinier.csv  STRUCT_zoo_demandeadoption.csv  STRUCT_zoo_enclos.csv  STRUCT_zoo_entree.csv  STRUCT_zoo_espece.csv  STRUCT_zoo_gardien.csv  STRUCT_zoo_veterinaire.csv  (+4 more)
Families/ODS/: zoo-families.ods
Families/Views/: Makefile  animalident.xml  animalname.xml  animaltatoo.xml  de_mail_realised.xml  de_mail_refused.xml  de_mail_sick.xml  maladie.xml  viewcmdecuisto.odt  viewcmdecuisto.xml  viewenclos.xml  viewordonnance.xml  viewtickets.xml
Images/: Makefile
Scripts/: Makefile  zoo_addChildren.php  zoo_addchild.php  zoo_animalRename.php  zoo_animalReport.php  zoo_animalReport.xml  zoo_animallist.php  zoo_animalrename.php  zoo_animalreport.php  zoo_animalreport.xml  zoo_countAnimals.php  zoo_countanimal.php  zoo_density.php  zoo_docProperty.php  zoo_docproperty.php
